<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.monarchinitiative.maxodiff</groupId>
        <artifactId>maxodiff</artifactId>
        <version>0.0.2</version>
    </parent>

    <artifactId>maxodiff-core</artifactId>

    <dependencies>
        <dependency>
            <groupId>org.monarchinitiative.phenol</groupId>
            <artifactId>phenol-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.monarchinitiative.phenol</groupId>
            <artifactId>phenol-annotations</artifactId>
        </dependency>

        <!-- TODO: ideally we should only use LIRICAL core here, or nothing at all,
              and all LIRICAL should be in a separate module,
              and provide the implementation of the interface for performing differential diagnosis.
          -->
        <dependency>
            <groupId>com.github.TheJacksonLaboratory.LIRICAL</groupId>
<!--            <groupId>org.monarchinitiative.lirical</groupId>-->
            <artifactId>lirical-core</artifactId>
        </dependency>
        <dependency>
            <groupId>com.github.TheJacksonLaboratory.LIRICAL</groupId>
<!--            <groupId>org.monarchinitiative.lirical</groupId>-->
            <artifactId>lirical-configuration</artifactId>
        </dependency>
        <dependency>
            <groupId>com.github.TheJacksonLaboratory.LIRICAL</groupId>
<!--            <groupId>org.monarchinitiative.lirical</groupId>-->
            <artifactId>lirical-io</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- TODO: use in benchmark module       -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-csv</artifactId>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math3</artifactId>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
